// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute with API key should return success 1`] = `
Object {
  "data": Object {
    "Results": Object {
      "series": Array [
        Object {
          "data": Array [
            Object {
              "footnotes": Array [
                Object {},
              ],
              "latest": "true",
              "period": "M09",
              "periodName": "September",
              "value": "274.138",
              "year": "2021",
            },
            Object {
              "footnotes": Array [
                Object {},
              ],
              "period": "M08",
              "periodName": "August",
              "value": "273.012",
              "year": "2021",
            },
            Object {
              "footnotes": Array [
                Object {},
              ],
              "period": "M07",
              "periodName": "July",
              "value": "271.123",
              "year": "2021",
            },
          ],
          "seriesID": "CUSR0000SA0",
        },
      ],
    },
    "message": Array [],
    "responseTime": 212,
    "result": 271.123,
    "status": "REQUEST_SUCCEEDED",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 271.123,
  "statusCode": 200,
}
`;

exports[`execute with serie/month/year should return success 1`] = `
Object {
  "data": Object {
    "Results": Object {
      "series": Array [
        Object {
          "data": Array [
            Object {
              "footnotes": Array [
                Object {},
              ],
              "latest": "true",
              "period": "M09",
              "periodName": "September",
              "value": "274.138",
              "year": "2021",
            },
            Object {
              "footnotes": Array [
                Object {},
              ],
              "period": "M08",
              "periodName": "August",
              "value": "273.012",
              "year": "2021",
            },
            Object {
              "footnotes": Array [
                Object {},
              ],
              "period": "M07",
              "periodName": "July",
              "value": "272.265",
              "year": "2021",
            },
          ],
          "seriesID": "CUSR0000SA0",
        },
      ],
    },
    "message": Array [],
    "responseTime": 212,
    "result": 272.265,
    "status": "REQUEST_SUCCEEDED",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 272.265,
  "statusCode": 200,
}
`;
